chore: upgrade laravel to 10, usage phpstan, rector config and pint

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ language: php
 
 php:
   - 7.3
+  - 8.1
 
 env:
   - laravel_ver=5.6.* testbench_ver=3.7.* setup=basic
@@ -12,6 +13,30 @@ env:
   - laravel_ver=5.8.* testbench_ver=3.8.* setup=stablex
   - laravel_ver=8.* testbench_ver=3.8.* setup=basic
   - laravel_ver=8.* testbench_ver=3.8.* setup=stablex
+  - laravel_ver=10.* testbench_ver=8.0.* setup=basic
+  - laravel_ver=10.* testbench_ver=8.0.* setup=stablex
+
+jobs:
+  include:
+    - php: 7.3
+      env: laravel_ver=5.6.* testbench_ver=3.7.* setup=basic
+    - php: 7.3
+      env: laravel_ver=5.6.* testbench_ver=3.7.* setup=basic
+    - php: 7.3
+      env: laravel_ver=5.6.* testbench_ver=3.7.* setup=stable
+    - php: 7.3
+      env: laravel_ver=5.8.* testbench_ver=3.8.* setup=basic
+    - php: 7.3
+      env: laravel_ver=5.8.* testbench_ver=3.8.* setup=stablex
+    - php: 7.3
+      env: laravel_ver=8.* testbench_ver=3.8.* setup=basic
+    - php: 7.3
+      env: laravel_ver=8.* testbench_ver=3.8.* setup=stablex
+    - php: 8.1
+      env: laravel_ver=10.* testbench_ver=8.0.* setup=basic
+    - php: 8.1
+      env: laravel_ver=10.* testbench_ver=8.0.* setup=stablex
+
 services:
   - docker
 
@@ -24,7 +49,7 @@ before_install:
   - docker run -d --net=host --ulimit nofile=65536:65536 -v $TRAVIS_BUILD_DIR/tests:/centrifugo -p 8000:8000 centrifugo/centrifugo centrifugo -c config.json
   - docker ps -a
   - travis_retry composer self-update
-  - composer require "illuminate/broadcasting:${laravel_ver}" --no-update  
+  - composer require "illuminate/broadcasting:${laravel_ver}" --no-update
   - composer require "laravel/framework:${laravel_ver}" --no-update
   - composer require "orchestra/testbench:${testbench_ver}" --no-update
   - composer require "phpunit/phpunit:7.*||8.*"
