--- a/composer.json
+++ b/composer.json
@@ -18,20 +18,20 @@
         "source": "https://github.com/denis660/laravel-centrifugo"
     },
     "require": {
-        "php": "^7.4|^8.0",
-       "laravel/framework": "^8.75.0|^9.0|^10.0",
+        "php": "^8.3",
+       "laravel/framework": "^11.0",
         "guzzlehttp/guzzle": "~6.0|^7.0"
     },
     "require-dev": {
-        "nunomaduro/larastan": "^2.2.9",
-        "orchestra/testbench": "^8.0",
-        "phpstan/phpstan-strict-rules": "^1.1",
-        "phpunit/phpunit": "^9.5.10",
-        "timeweb/phpstan-enum": "^3.0",
-        "phpstan/phpstan": "1.10.3",
-        "rector/rector": "^0.15.20",
-        "driftingly/rector-laravel": "^0.16.1",
-        "laravel/pint": "^1.6"
+        "larastan/larastan": "^2.9.2",
+        "orchestra/testbench": "^9.0",
+        "phpstan/phpstan-strict-rules": "^1.5",
+        "phpunit/phpunit": "^10.5",
+        "timeweb/phpstan-enum": "^3.1.1",
+        "phpstan/phpstan": "1.11.8",
+        "rector/rector": "^1.0.0",
+        "driftingly/rector-laravel": "^1.0.0",
+        "laravel/pint": "^1.13.6"
     },
     "autoload": {
         "psr-4": {
